--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,47 +25,34 @@ body {
 	font-family: 'Poppins', 'Poppins Fallback', Arial, Helvetica, sans-serif;
 }
 
-.custom-cluster {
-	&-inner {
-		border-radius: 100px;
-		color: #212121;
-		width: 36px;
-		height: 36px;
-		opacity: 0.9;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		font-size: 16px;
-		font-weight: bold;
+.marker {
+	border-radius: 100px !important;
+	color: #000;
+	width: 30px;
+	height: 30px;
+	opacity: 0.9;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-		&-safe {
-			background-color: #ffff00;
-			border: #ffff00 2px solid;
-		}
+	&.marker-critical {
+		background-color: #ff4d4d;
+		border: #cc3737 2px solid;
+		color: #fff;
+	}
 
-		&-low {
-			background-color: #ffd700;
-			border: #ffd700 2px solid;
-		}
+	&.marker-high {
+		background-color: #ffa34d;
+		border: #cc7a37 2px solid;
+	}
 
-		&-mid-low {
-			background-color: #ffaf00;
-			border: #ffaf00 2px solid;
-		}
+	&.marker-normal {
+		background-color: #ffd666;
+		border: #ccaa4d 2px solid;
+	}
 
-		&-mid {
-			background-color: #ff8700;
-			border: #ff8700 2px solid;
-		}
-
-		&-mid-high {
-			background-color: #ff5f00;
-			border: #ff5f00 2px solid;
-		}
-
-		&-high {
-			background-color: #eb2f2f;
-			border: #eb2f2f 2px solid;
-		}
+	&.marker-low {
+		background-color: #91d475;
+		border: #6ba35a 2px solid;
 	}
 }
