--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,28 +1,166 @@
 @import 'tailwindcss';
+@config "../../tailwind.config.ts";
 
-:root {
-	--background: #ffffff;
-	--foreground: #171717;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@theme inline {
-	--color-background: var(--background);
-	--color-foreground: var(--foreground);
-	--font-sans: var(--font-geist-sans);
-	--font-mono: var(--font-geist-mono);
-}
+@layer utilities {
+	body {
+		font-family: 'Poppins', 'Poppins Fallback', Arial, Helvetica, sans-serif;
+	}
 
-@media (prefers-color-scheme: dark) {
-	:root {
-		--background: #0a0a0a;
-		--foreground: #ededed;
+	.text-balance {
+		text-wrap: balance;
 	}
 }
 
-body {
-	background: var(--background);
-	color: var(--foreground);
-	font-family: 'Poppins', 'Poppins Fallback', Arial, Helvetica, sans-serif;
+@layer base {
+	:root {
+		--background: 0 0% 100%;
+		--foreground: 240 10% 3.9%;
+		--card: 0 0% 100%;
+		--card-foreground: 240 10% 3.9%;
+		--popover: 0 0% 100%;
+		--popover-foreground: 240 10% 3.9%;
+		--primary: 240 5.9% 10%;
+		--primary-foreground: 0 0% 98%;
+		--secondary: 240 4.8% 95.9%;
+		--secondary-foreground: 240 5.9% 10%;
+		--muted: 240 4.8% 95.9%;
+		--muted-foreground: 240 3.8% 46.1%;
+		--accent: 240 4.8% 95.9%;
+		--accent-foreground: 240 5.9% 10%;
+		--destructive: 0 84.2% 60.2%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 240 5.9% 90%;
+		--input: 240 5.9% 90%;
+		--ring: 240 10% 3.9%;
+		--chart-1: 12 76% 61%;
+		--chart-2: 173 58% 39%;
+		--chart-3: 197 37% 24%;
+		--chart-4: 43 74% 66%;
+		--chart-5: 27 87% 67%;
+		--radius: 0.5rem;
+
+		--sh-identifier: #354150;
+		--sh-keyword: #f47067;
+		--sh-string: #00a99a;
+		--sh-class: #8d85ff;
+		--sh-property: #4e8fdf;
+		--sh-entity: #6eafad;
+		--sh-jsxliterals: #bf7db6;
+		--sh-sign: #8996a3;
+		--sh-comment: #a19595;
+	}
+
+	.dark {
+		--background: 241 6% 7%;
+		--foreground: 0 0% 98%;
+		--card: 240 10% 3.9%;
+		--card-foreground: 0 0% 98%;
+		--popover: 240 10% 3.9%;
+		--popover-foreground: 0 0% 98%;
+		--primary: 0 0% 98%;
+		--primary-foreground: 240 5.9% 10%;
+		--secondary: 240 3.7% 15.9%;
+		--secondary-foreground: 0 0% 98%;
+		--muted: 240 3.7% 15.9%;
+		--muted-foreground: 240 5% 64.9%;
+		--accent: 240 3.7% 15.9%;
+		--accent-foreground: 0 0% 98%;
+		--destructive: 0 62.8% 30.6%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 240 3.7% 15.9%;
+		--input: 240 3.7% 15.9%;
+		--ring: 240 4.9% 83.9%;
+		--chart-1: 220 70% 50%;
+		--chart-2: 160 60% 45%;
+		--chart-3: 30 80% 55%;
+		--chart-4: 280 65% 60%;
+		--chart-5: 340 75% 55%;
+
+		--sh-class: #4c97f8;
+		--sh-identifier: white;
+		--sh-keyword: #f47067;
+		--sh-string: #0fa295;
+
+		.leaflet-layer,
+		.leaflet-control-zoom-in,
+		.leaflet-control-zoom-out,
+		.leaflet-control-attribution {
+			filter: invert(100%) hue-rotate(180deg) brightness(95%)
+				contrast(90%);
+		}
+	}
+}
+
+@layer base {
+	* {
+		@apply border-border outline-ring/50;
+	}
+
+	body {
+		@apply bg-background text-foreground;
+	}
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+.dialog-overlay {
+	position: fixed;
+	z-index: 998;
+	animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+	inset: 0;
+	background-color: rgba(0, 0, 0, 0.9);
+}
+
+.dialog-content {
+	position: fixed;
+	z-index: 999;
+}
+
+.free-palestine {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+}
+
+.line {
+	fill: none;
+	stroke: currentColor;
+	stroke-width: 6;
+	transition: stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
+		stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line1 {
+	stroke-dasharray: 60 207;
+}
+
+.line2 {
+	stroke-dasharray: 60 60;
+}
+
+.line3 {
+	stroke-dasharray: 60 207;
+}
+
+.opened.line1 {
+	stroke-dasharray: 90 207;
+	stroke-dashoffset: -134;
+}
+
+.opened.line2 {
+	stroke-dasharray: 1 60;
+	stroke-dashoffset: -30;
+}
+
+.opened.line3 {
+	stroke-dasharray: 90 207;
+	stroke-dashoffset: -134;
 }
 
 .marker {
