--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @config "../../tailwind.config.ts";
 
 @tailwind base;
@@ -6,191 +6,203 @@
 @tailwind utilities;
 
 @layer utilities {
-	body {
-		font-family: 'Poppins', 'Poppins Fallback', Arial, Helvetica, sans-serif;
-	}
+  body {
+    font-family: "Poppins", "Poppins Fallback", Arial, Helvetica, sans-serif;
+  }
 
-	.text-balance {
-		text-wrap: balance;
-	}
+  .text-balance {
+    text-wrap: balance;
+  }
 }
 
 @layer base {
-	:root {
-		--background: 0 0% 100%;
-		--foreground: 240 10% 3.9%;
-		--card: 0 0% 100%;
-		--card-foreground: 240 10% 3.9%;
-		--popover: 0 0% 100%;
-		--popover-foreground: 240 10% 3.9%;
-		--primary: 240 5.9% 10%;
-		--primary-foreground: 0 0% 98%;
-		--secondary: 240 4.8% 95.9%;
-		--secondary-foreground: 240 5.9% 10%;
-		--muted: 240 4.8% 95.9%;
-		--muted-foreground: 240 3.8% 46.1%;
-		--accent: 240 4.8% 95.9%;
-		--accent-foreground: 240 5.9% 10%;
-		--destructive: 0 84.2% 60.2%;
-		--destructive-foreground: 0 0% 98%;
-		--border: 240 5.9% 90%;
-		--input: 240 5.9% 90%;
-		--ring: 240 10% 3.9%;
-		--chart-1: 12 76% 61%;
-		--chart-2: 173 58% 39%;
-		--chart-3: 197 37% 24%;
-		--chart-4: 43 74% 66%;
-		--chart-5: 27 87% 67%;
-		--radius: 0.5rem;
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 240 5.9% 10%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 10% 3.9%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
 
-		--sh-identifier: #354150;
-		--sh-keyword: #f47067;
-		--sh-string: #00a99a;
-		--sh-class: #8d85ff;
-		--sh-property: #4e8fdf;
-		--sh-entity: #6eafad;
-		--sh-jsxliterals: #bf7db6;
-		--sh-sign: #8996a3;
-		--sh-comment: #a19595;
-	}
+    --sh-identifier: #354150;
+    --sh-keyword: #f47067;
+    --sh-string: #00a99a;
+    --sh-class: #8d85ff;
+    --sh-property: #4e8fdf;
+    --sh-entity: #6eafad;
+    --sh-jsxliterals: #bf7db6;
+    --sh-sign: #8996a3;
+    --sh-comment: #a19595;
+  }
 
-	.dark {
-		--background: 241 6% 7%;
-		--foreground: 0 0% 98%;
-		--card: 240 10% 3.9%;
-		--card-foreground: 0 0% 98%;
-		--popover: 240 10% 3.9%;
-		--popover-foreground: 0 0% 98%;
-		--primary: 0 0% 98%;
-		--primary-foreground: 240 5.9% 10%;
-		--secondary: 240 3.7% 15.9%;
-		--secondary-foreground: 0 0% 98%;
-		--muted: 240 3.7% 15.9%;
-		--muted-foreground: 240 5% 64.9%;
-		--accent: 240 3.7% 15.9%;
-		--accent-foreground: 0 0% 98%;
-		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 0 0% 98%;
-		--border: 240 3.7% 15.9%;
-		--input: 240 3.7% 15.9%;
-		--ring: 240 4.9% 83.9%;
-		--chart-1: 220 70% 50%;
-		--chart-2: 160 60% 45%;
-		--chart-3: 30 80% 55%;
-		--chart-4: 280 65% 60%;
-		--chart-5: 340 75% 55%;
+  .dark {
+    --background: 241 6% 7%;
+    --foreground: 0 0% 98%;
+    --card: 240 10% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 240 5.9% 10%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 240 4.9% 83.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
 
-		--sh-class: #4c97f8;
-		--sh-identifier: white;
-		--sh-keyword: #f47067;
-		--sh-string: #0fa295;
+    --sh-class: #4c97f8;
+    --sh-identifier: white;
+    --sh-keyword: #f47067;
+    --sh-string: #0fa295;
 
-		.leaflet-layer,
-		.leaflet-control-zoom-in,
-		.leaflet-control-zoom-out,
-		.leaflet-control-attribution {
-			filter: invert(100%) hue-rotate(180deg) brightness(95%)
-				contrast(90%);
-		}
-	}
+    .leaflet-layer,
+    .leaflet-control-zoom-in,
+    .leaflet-control-zoom-out,
+    .leaflet-control-attribution {
+      filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
+    }
+  }
 }
 
 @layer base {
-	* {
-		@apply border-border outline-ring/50;
-	}
+  * {
+    @apply border-border outline-ring/50;
+  }
 
-	body {
-		@apply bg-background text-foreground;
-	}
+  body {
+    @apply bg-background text-foreground;
+  }
 }
 
 html {
-	scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 .dialog-overlay {
-	position: fixed;
-	z-index: 998;
-	animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
-	inset: 0;
-	background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  z-index: 998;
+  animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .dialog-content {
-	position: fixed;
-	z-index: 999;
+  position: fixed;
+  z-index: 999;
 }
 
 .free-palestine {
-	position: fixed;
-	bottom: 0;
-	left: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 .line {
-	fill: none;
-	stroke: currentColor;
-	stroke-width: 6;
-	transition: stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
-		stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 6;
+  transition: stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .line1 {
-	stroke-dasharray: 60 207;
+  stroke-dasharray: 60 207;
 }
 
 .line2 {
-	stroke-dasharray: 60 60;
+  stroke-dasharray: 60 60;
 }
 
 .line3 {
-	stroke-dasharray: 60 207;
+  stroke-dasharray: 60 207;
 }
 
 .opened.line1 {
-	stroke-dasharray: 90 207;
-	stroke-dashoffset: -134;
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
 }
 
 .opened.line2 {
-	stroke-dasharray: 1 60;
-	stroke-dashoffset: -30;
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
 }
 
 .opened.line3 {
-	stroke-dasharray: 90 207;
-	stroke-dashoffset: -134;
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
 }
 
 .marker {
-	border-radius: 100px !important;
-	color: #000;
-	width: 30px;
-	height: 30px;
-	opacity: 0.9;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  border-radius: 100px !important;
+  color: #000;
+  opacity: 0.9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-	&.marker-critical {
-		background-color: #ff4d4d;
-		border: #cc3737 2px solid;
-		color: #fff;
-	}
+  &.marker-critical {
+    background-color: #ff4d4d;
+    border: #cc3737 2px solid;
+    color: #fff;
 
-	&.marker-high {
-		background-color: #ffa34d;
-		border: #cc7a37 2px solid;
-	}
+    width: 32px;
+    height: 32px;
+    font-size: 12px !important;
+  }
 
-	&.marker-normal {
-		background-color: #ffd666;
-		border: #ccaa4d 2px solid;
-	}
+  &.marker-high {
+    background-color: #ffa34d;
+    border: #cc7a37 2px solid;
+    width: 28px;
+    height: 28px;
+    font-size: 11px !important;
+  }
 
-	&.marker-low {
-		background-color: #91d475;
-		border: #6ba35a 2px solid;
-	}
+  &.marker-normal {
+    background-color: #ffd666;
+    border: #ccaa4d 2px solid;
+    width: 24px;
+    height: 24px;
+    font-size: 10px !important;
+	opacity: 0.6;
+  }
+
+  &.marker-low {
+    background-color: #91d475;
+    border: #6ba35a 2px solid;
+    width: 20px;
+    height: 20px;
+    font-size: 9px !important;
+	opacity: 0.5;
+  }
 }
