--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,12 @@
   }
 }
 
+.leaflet-control-scale-line {
+  border: 0 !important;
+  text-shadow: none !important;
+  border-radius: 4px !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -52,6 +58,9 @@
     --sh-jsxliterals: #bf7db6;
     --sh-sign: #8996a3;
     --sh-comment: #a19595;
+
+    .leaflet-control-scale-line {
+    }
   }
 
   .dark {
@@ -90,6 +99,11 @@
     .leaflet-control-zoom-out,
     .leaflet-control-attribution {
       filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
+    }
+
+    .leaflet-control-scale-line {
+      background: #000000 !important;
+      color: #eee !important;
     }
   }
 }
@@ -131,7 +145,8 @@ html {
   fill: none;
   stroke: currentColor;
   stroke-width: 6;
-  transition: stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition:
+    stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -194,7 +209,7 @@ html {
     width: 24px;
     height: 24px;
     font-size: 10px !important;
-	opacity: 0.6;
+    opacity: 0.6;
   }
 
   &.marker-low {
@@ -203,6 +218,6 @@ html {
     width: 20px;
     height: 20px;
     font-size: 9px !important;
-	opacity: 0.5;
+    opacity: 0.5;
   }
 }
